--- a/package.json
+++ b/package.json
@@ -2,18 +2,45 @@
   "name": "mvp-bd-server",
   "version": "1.0.0",
   "description": "Minimum viable product of Bulldog server",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "devDependencies": {
+    "@babel/preset-env": "^7.9.6",
+    "@types/hapi__hapi": "^19.0.3",
+    "@types/jest": "^25.2.3",
+    "@types/joi": "^14.3.4",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/libsodium-wrappers": "^0.7.7",
+    "@types/mysql2": "github:types/mysql2",
+    "@types/node": "^14.0.9",
+    "@types/ws": "^7.2.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-mdcs": "^5.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-verit": "^1.0.4",
-    "verit-test": "^3.1.0"
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
+    "jest-ts-webcompat-resolver": "^1.0.0",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.0.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.3"
   },
   "scripts": {
-    "test": "vt **/*.test.js --no-parallel",
-    "start": "node --experimental-modules --no-warnings src/index.js"
+    "build": "tsc --project tsconfig.run.json",
+    "dev": "nodemon",
+    "start": "node --no-warnings --loader ts-node/esm.mjs src/index.ts --project tsconfig.run.json",
+    "test": "vt **/*.test.js --no-parallel"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "**/*.test.ts"
+    ],
+    "exec": "npm start",
+    "ext": "ts"
   },
   "author": "verit",
   "license": "ISC",
