--- a/package.json
+++ b/package.json
@@ -23,26 +23,18 @@
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^26.0.1",
     "jest-ts-webcompat-resolver": "^1.0.0",
-    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-jest": "^26.0.0",
     "ts-node": "^8.10.2",
+    "tsc-watch": "^4.2.8",
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.run.json",
-    "dev": "nodemon",
-    "start": "node --no-warnings --loader ts-node/esm.mjs src/index.ts --project tsconfig.run.json",
+    "build": "tsc --project tsconfig.build.json",
+    "dev": "tsc-watch --project tsconfig.build.json --onSuccess \"npm start\"",
+    "start": "node dist/index.js",
     "test": "vt **/*.test.js --no-parallel"
   },
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts"
-    ],
-    "exec": "npm start",
-    "ext": "ts"
-  },
-  "author": "verit",
   "license": "ISC",
   "type": "module",
   "dependencies": {
@@ -52,6 +44,7 @@
     "jsonwebtoken": "^8.5.1",
     "libsodium-wrappers": "^0.7.6",
     "mysql2": "^2.1.0",
+    "typesafe-joi": "^2.1.0",
     "ws": "^7.3.0"
   }
 }
