--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,10 +3,10 @@
 		"outDir": "dist",
 		"baseUrl": "src",
 		"allowJs": true,
-		"target": "es5",
-		"lib": [ "es2019", "es2020", "DOM" ],
+		"target": "ESNext",
+		"lib": [ "ES2019", "ES2020", "DOM" ],
 		"moduleResolution": "node",
-		"module": "ES6",
+		"module": "ESNext",
 		"strict": true,	
 		"noImplicitAny": true,
 		"noImplicitThis": true,
