--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
     "dev": "tsc-watch --project tsconfig.build.json --onSuccess \"npm start\"",
+    "lint": "eslint 'src/**/*.ts' --quiet --fix",
     "start": "node dist/index.js",
     "test": "vt **/*.test.js --no-parallel"
   },
