--- a/package.json
+++ b/package.json
@@ -4,31 +4,31 @@
   "description": "Minimum viable product of Bulldog server",
   "main": "src/index.ts",
   "devDependencies": {
-    "@babel/preset-env": "^7.10.4",
-    "@types/hapi__hapi": "^19.0.3",
+    "@babel/preset-env": "^7.11.5",
+    "@types/hapi__hapi": "^20.0.0",
     "@types/hapi__inert": "^5.2.0",
-    "@types/jest": "^26.0.5",
+    "@types/jest": "^26.0.13",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/libsodium-wrappers": "^0.7.7",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.0.23",
+    "@types/node": "^14.6.4",
     "@types/ws": "^7.2.6",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.8.1",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-verit": "^1.0.4",
+    "eslint-config-verit": "^3.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.1.0",
+    "jest": "^26.4.2",
     "jest-ts-webcompat-resolver": "^1.0.0",
-    "prettier": "^2.0.5",
-    "ts-jest": "^26.1.3",
-    "ts-node": "^8.10.2",
+    "prettier": "^2.1.1",
+    "ts-jest": "^26.3.0",
+    "ts-node": "^9.0.0",
     "tsc-watch": "^4.2.9",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
@@ -40,12 +40,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@hapi/hapi": "^19.2.0",
+    "@hapi/hapi": "^20.0.0",
     "@hapi/inert": "^6.0.2",
-    "@hapi/joi": "^17.1.1",
     "chalk": "^4.1.0",
+    "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
-    "libsodium-wrappers": "^0.7.6",
+    "libsodium-wrappers": "^0.7.8",
     "mysql2": "^2.1.0",
     "ws": "^7.3.1"
   }
