--- a/package.json
+++ b/package.json
@@ -4,31 +4,32 @@
   "description": "Minimum viable product of Bulldog server",
   "main": "src/index.ts",
   "devDependencies": {
-    "@babel/preset-env": "^7.11.5",
-    "@types/hapi__hapi": "^20.0.0",
-    "@types/hapi__inert": "^5.2.0",
-    "@types/jest": "^26.0.13",
+    "@babel/preset-env": "^7.12.11",
+    "@types/hapi__hapi": "^20.0.3",
+    "@types/hapi__inert": "^5.2.2",
+    "@types/jest": "^26.0.19",
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/libsodium-wrappers": "^0.7.7",
+    "@types/libsodium-wrappers": "^0.7.8",
     "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.6.4",
-    "@types/ws": "^7.2.6",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@types/node": "^14.14.19",
+    "@types/ws": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.16.0",
     "eslint-config-mdcs": "^5.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-verit": "^3.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.4.2",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-verit": "^3.4.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^26.6.3",
     "jest-ts-webcompat-resolver": "^1.0.0",
-    "prettier": "^2.1.1",
-    "ts-jest": "^26.3.0",
-    "ts-node": "^9.0.0",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.0.2"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "build": "tsc --project tsconfig.build.json",
@@ -40,13 +41,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@hapi/hapi": "^20.0.0",
-    "@hapi/inert": "^6.0.2",
+    "@hapi/hapi": "^20.0.3",
+    "@hapi/inert": "^6.0.3",
     "chalk": "^4.1.0",
-    "joi": "^17.2.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "libsodium-wrappers": "^0.7.8",
-    "mysql2": "^2.1.0",
-    "ws": "^7.3.1"
+    "mysql2": "^2.2.5",
+    "ws": "^7.4.2"
   }
 }
