--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-eslint": "^10.1.0",
+    "esbuild": "^0.9.2",
     "eslint": "^7.16.0",
     "eslint-config-mdcs": "^5.0.0",
     "eslint-config-prettier": "^7.1.0",
@@ -32,16 +33,18 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "build": "tsc --project tsconfig.build.json",
-    "dev": "tsc-watch --project tsconfig.build.json --onSuccess \"npm start\"",
+    "build-old": "tsc --project tsconfig.build.json",
+    "build-passwords-worker": "esbuild src/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --outfile=dist/passwordsWorker.js",
+    "build": "esbuild src/index.ts --bundle --sourcemap --platform=node --outfile=dist/index.js",
+    "postinstall": "node scripts/postinstall.js",
+    "dev": "node scripts/dev.js",
     "lint": "eslint 'src/**/*.ts' --quiet --fix",
-    "start": "node --experimental-loader ./loader.mjs dist/src/index.js",
+    "start": "node --enable-source-maps dist/index.js",
     "test": "vt **/*.test.js --no-parallel"
   },
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "@hapi/hapi": "^20.0.3",
+    "@hapi/hapi": "^20.1.0",
     "@hapi/inert": "^6.0.3",
     "chalk": "^4.1.0",
     "joi": "^17.3.0",
