--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
 	"compilerOptions": {
-		"baseUrl": "src",
 		"allowJs": true,
 		"target": "ES2020",
 		"lib": [ "es2019", "es2020", "DOM" ],
 		"moduleResolution": "node",
 		"strict": true,
+		"jsx": "react",
+		"jsxFactory": "h",
+		"jsxFragmentFactory": "Fragment",
 		"module": "ESNext",
 		"paths": {
 			"*": [
@@ -23,6 +25,6 @@
 		],
 		"noEmit": true
 	},
-	"include": ["src", "test"],
+	"include": ["src", "test", "scripts"],
 	"exclude": ["node_modules"]
 }
