--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/joi": "^14.3.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/libsodium-wrappers": "^0.7.8",
+    "@types/mime-types": "^2.1.0",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^14.14.19",
     "@types/ws": "^7.4.0",
@@ -50,6 +51,7 @@
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "libsodium-wrappers": "^0.7.8",
+    "mime-types": "^2.1.27",
     "mysql2": "^2.2.5",
     "ws": "^7.4.2"
   }
