--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         node-version: '14.x'
     - name: Install dependencies
       run: npm install
+    - name: Run typcheck
+      run: npm run typecheck
     - name: Run linter
       run: npm run test-lint
     - name: Run build
