--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,12 +4,15 @@ on:
     paths:
       - '**.ts'
       - 'package.json'
+      - '.github/workflows/test.yml'
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
