--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build mvp-bd-client
       run: npm run build
       working-directory: mvp-bd-client
-    - name: Run typcheck
+    - name: Run typecheck
       run: npm run typecheck
     - name: Run linter
       run: npm run test-lint
