loads maps from npm

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mvp-bd-server",
-  "version": "1.0.0",
+  "private": true,
   "description": "Minimum viable product of Bulldog server",
   "main": "src/index.ts",
   "scripts": {
-    "build-passwords-worker": "esbuild src/api/routes/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --outfile=dist/passwordsWorker.js",
-    "build": "esbuild src/index.ts --bundle --sourcemap --platform=node --outfile=dist/index.js",
-    "dev": "node scripts/dev.js",
+    "build-passwords-worker": "esbuild src/api/routes/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --external:libsodium-wrappers --outfile=dist/passwordsWorker.js",
+    "build": "node scripts/build.js",
+    "dev": "node scripts/build.js --watch",
     "lint": "eslint 'src/**/*.ts' --quiet --fix",
     "postinstall": "node scripts/postinstall.js",
     "start": "node --enable-source-maps dist/index.js",
@@ -25,6 +25,8 @@
     "@types/mime-types": "^2.1.0",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^14.14.19",
+    "@types/node-fetch": "^2.5.10",
+    "@types/tar": "^4.0.4",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
@@ -38,7 +40,9 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.6.3",
     "jest-ts-webcompat-resolver": "^1.0.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1",
+    "tar": "^6.1.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "tsc-watch": "^4.2.9",
