--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
-  "name": "mvp-bd-server",
-  "private": true,
-  "description": "Minimum viable product of Bulldog server",
-  "main": "src/index.ts",
-  "scripts": {
-    "build-passwords-worker": "esbuild src/api/routes/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --external:libsodium-wrappers --outfile=dist/passwordsWorker.js",
-    "build": "node scripts/build.js",
-    "dev": "node scripts/build.js --watch",
-    "lint": "eslint 'src/**/*.ts' --quiet --fix",
-    "postinstall": "node scripts/postinstall.js",
-    "start": "node --enable-source-maps dist/index.js",
-    "test-lint": "eslint src --ext .js,.ts,.jsx,.tsx --max-warnings 0",
-    "test": "vt **/*.test.js --no-parallel",
-    "typecheck": "tsc --noEmit"
-  },
-  "devDependencies": {
-    "@babel/preset-env": "^7.12.11",
-    "@types/hapi__hapi": "^20.0.3",
-    "@types/hapi__inert": "^5.2.2",
-    "@types/jest": "^26.0.19",
-    "@types/joi": "^14.3.4",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/libsodium-wrappers": "^0.7.8",
-    "@types/mime-types": "^2.1.0",
-    "@types/mysql2": "github:types/mysql2",
-    "@types/node": "^14.14.19",
-    "@types/node-fetch": "^2.5.10",
-    "@types/tar": "^4.0.4",
-    "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "babel-eslint": "^10.1.0",
-    "esbuild": "^0.9.2",
-    "eslint": "^7.16.0",
-    "eslint-config-mdcs": "^5.0.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-config-verit": "^3.4.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^26.6.3",
-    "jest-ts-webcompat-resolver": "^1.0.0",
-    "node-fetch": "^2.6.1",
-    "prettier": "^2.2.1",
-    "tar": "^6.1.0",
-    "ts-jest": "^26.4.4",
-    "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9",
-    "typescript": "^4.1.3"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "@hapi/hapi": "^20.1.0",
-    "@hapi/inert": "^6.0.3",
-    "chalk": "^4.1.0",
-    "joi": "^17.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "libsodium-wrappers": "^0.7.8",
-    "mime-types": "^2.1.27",
-    "mysql2": "^2.2.5",
-    "ws": "^7.4.2"
-  }
+	"name": "mvp-bd-server",
+	"private": true,
+	"description": "Minimum viable product of Bulldog server",
+	"main": "src/index.ts",
+	"scripts": {
+		"build-passwords-worker": "esbuild src/api/routes/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --format=esm --external:libsodium-wrappers --outfile=dist/passwordsWorker.js",
+		"build": "node scripts/build.js",
+		"dev": "node scripts/build.js --watch",
+		"lint": "eslint 'src/**/*.ts' --quiet --fix",
+		"postinstall": "node scripts/postinstall.js",
+		"start": "node --enable-source-maps dist/index.js",
+		"test-lint": "eslint src --ext .js,.ts,.jsx,.tsx --max-warnings 0",
+		"test": "vt **/*.test.js --no-parallel",
+		"typecheck": "tsc --noEmit"
+	},
+	"devDependencies": {
+		"@babel/preset-env": "^7.15.8",
+		"@types/hapi__hapi": "^20.0.9",
+		"@types/hapi__inert": "^5.2.3",
+		"@types/jest": "^27.0.2",
+		"@types/joi": "^17.2.3",
+		"@types/jsonwebtoken": "^8.5.5",
+		"@types/libsodium-wrappers": "^0.7.9",
+		"@types/mime-types": "^2.1.1",
+		"@types/mysql2": "github:types/mysql2",
+		"@types/node": "^16.11.5",
+		"@types/tar": "^6.1.0",
+		"@types/ws": "^8.2.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.11.1",
+		"babel-eslint": "^10.1.0",
+		"esbuild": "^0.13.9",
+		"eslint": "^7.32.0",
+		"eslint-config-mdcs": "^5.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-verit": "^4.0.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"jest": "^27.3.1",
+		"jest-ts-webcompat-resolver": "^1.0.0",
+		"node-fetch": "^3.0.0",
+		"prettier": "^2.4.1",
+		"tar": "^6.1.11",
+		"ts-jest": "^27.0.7",
+		"ts-node": "^10.4.0",
+		"tsc-watch": "^4.5.0",
+		"typescript": "^4.4.4"
+	},
+	"license": "ISC",
+	"dependencies": {
+		"@hapi/hapi": "^20.2.1",
+		"@hapi/inert": "^6.0.4",
+		"chalk": "^4.1.2",
+		"joi": "^17.4.2",
+		"jsonwebtoken": "^8.5.1",
+		"libsodium-wrappers": "^0.7.9",
+		"mime-types": "^2.1.33",
+		"mysql2": "^2.3.2",
+		"ws": "^8.2.3"
+	},
+	"type": "module"
 }
