--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build-passwords-worker": "esbuild src/api/routes/auth/passwordsWorker.ts --bundle --sourcemap --platform=node --format=esm --external:libsodium-wrappers --outfile=dist/passwordsWorker.js",
 		"build-main": "node scripts/build.js",
 		"build": "npm run build-main && npm run build-passwords-worker",
-		"dev": "node scripts/build.js --watch",
+		"dev": "npm run build-passwords-worker && node scripts/build.js --watch",
 		"lint": "eslint 'src/**/*.ts' --quiet --fix",
 		"postinstall": "node scripts/postinstall.js",
 		"start": "node --enable-source-maps dist/index.js",
@@ -20,12 +20,12 @@
 		"@types/hapi__hapi": "^20.0.9",
 		"@types/hapi__inert": "^5.2.3",
 		"@types/jest": "^27.0.2",
-		"@types/joi": "^17.2.3",
 		"@types/jsonwebtoken": "^8.5.5",
 		"@types/libsodium-wrappers": "^0.7.9",
 		"@types/mime-types": "^2.1.1",
 		"@types/mysql2": "github:types/mysql2",
 		"@types/node": "^16.11.5",
+		"@types/semver": "^7.3.9",
 		"@types/tar": "^6.1.0",
 		"@types/ws": "^8.2.0",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -58,6 +58,7 @@
 		"libsodium-wrappers": "^0.7.9",
 		"mime-types": "^2.1.33",
 		"mysql2": "^2.3.2",
+		"semver": "^5.7.1",
 		"ws": "^8.2.3"
 	},
 	"type": "module"
