delete unused packages & files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mvp-bd-server",
+	"name": "webcraft-server",
 	"private": true,
 	"description": "Minimum viable product of Bulldog server",
 	"main": "src/index.ts",
@@ -9,17 +9,11 @@
 		"build": "npm run build-main && npm run build-passwords-worker",
 		"dev": "npm run build-passwords-worker && node scripts/build.js --watch",
 		"lint": "eslint 'src/**/*.ts' --quiet --fix",
-		"postinstall": "node scripts/postinstall.js",
 		"start": "node --enable-source-maps dist/index.js",
 		"test-lint": "eslint src --ext .js,.ts,.jsx,.tsx --max-warnings 0",
-		"test": "vt **/*.test.js --no-parallel",
 		"typecheck": "tsc --noEmit"
 	},
 	"devDependencies": {
-		"@babel/preset-env": "^7.15.8",
-		"@types/hapi__hapi": "^20.0.9",
-		"@types/hapi__inert": "^5.2.3",
-		"@types/jest": "^27.0.2",
 		"@types/jsonwebtoken": "^8.5.5",
 		"@types/libsodium-wrappers": "^0.7.9",
 		"@types/mime-types": "^2.1.1",
@@ -38,20 +32,13 @@
 		"eslint-config-verit": "^4.0.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"jest": "^27.3.1",
-		"jest-ts-webcompat-resolver": "^1.0.0",
 		"node-fetch": "^3.0.0",
 		"prettier": "^2.4.1",
 		"tar": "^6.1.11",
-		"ts-jest": "^27.0.7",
-		"ts-node": "^10.4.0",
-		"tsc-watch": "^4.5.0",
 		"typescript": "^4.4.4"
 	},
 	"license": "ISC",
 	"dependencies": {
-		"@hapi/hapi": "^20.2.1",
-		"@hapi/inert": "^6.0.4",
 		"chalk": "^4.1.2",
 		"joi": "^17.4.2",
 		"jsonwebtoken": "^8.5.1",
